[package]
name = "serde_shon"
description = "SHON serialization and deserialization support in Rust"
authors = ["Dominykas Djacenko <chaosteil@gmail.com>"]
repository = "https://github.com/chaosteil/serde_shon"
keywords = ["shon", "serde", "serialization", "deserialization"]
categories = ["encoding"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
shell-escape = "0.1.5"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[[test]]
name = "example"
harness = false
